# ld43

./: .gitignore  AnimalPickup.gd  Block.tscn  BlueBird.tscn  Cargo.toml  Chicken.tscn  Constants.gd  Cow.tscn  Game.gd  Inventory.gd  InventoryStorage.gd  PathFinding.gdns  Pig.tscn  Player.tscn  Readme.md  RedBird.tscn  SpellFactory.gd  TestLevel.gd  TileSet.res  TileSet.tscn  export_presets.cfg  hello_world_library.gdnlib  level1.tscn  main.gdns  main.rb  main.tscn  native-lib.tres  new_tileset.tres  outdoortiles.tres  project.godot  rust_panic_hook.gd  state.gd  test.tres
images/: arcane-explosion.png.import  arcane-self-explosion.png.import  block.png.import  blue crouch@2x.png.import  blue@2x.png.import  blueshotgun.png.import  chicken crouch@2x.png.import  chicken@2x.png.import  cold-explosion.png.import  cold-self-explosion.png.import  cow@2x.png.import  fire-explosion.png.import  fire-self-explosion.png.import  outside-tiles.png.import  outside-tileset.tres  outside-tileset.tsx  outside-tileset.tsx.import  outside.json  outside.tmx  outside.tmx.import  outside.tscn  pig@2x.png.import  red crouch@2x.png.import  red@2x.png.import  redshotgun.png.import  tiles.png.import  uibg.png.import
pathfinding-lib/: Cargo.toml
pathfinding-lib/src/: lib.rs  panic.rs  point_math.rs
player/: Casting.gd  Player.gd  Player.tscn
raw/: FireBlast.aseprite  FireWall.png.import  arcaneblast.aseprite  bird.aseprite  environment-spot.aseprite  fireblast.ppd  fireblast64.png.import  flower.aseprite  frog.aseprite  frostblast.ppd  frostblast64.png.import  melee-enemy.aseprite  (+11 more)
(+300 files in other folders)
